--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "12.18.2",
+    "npm":"6.14.5",
+    "vscode": "^1.22.0"
   }
 }
