--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.22.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.8",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "12.18.2",
     "npm": "6.14.5",
     "vscode": "^1.22.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
